# stm32Hal-Template

./: .ccls  .gitignore  CMakeLists.txt  README.md  build.sh  linker.ld
Lib/hal/: CMakeLists.txt
Src/: CMakeLists.txt  main.c  main.h  system_stm32f4xx.c
